iface-modem: don't artificially forbid power updates when in OFF state

If for any reason the modem is in OFF state and still can talk to the modem,
allow running the remaining transition requests to LOW or ON. This can happen
for example for modems that use CFUN:0, i.e. which can still go online with
CFUN=1.

https://bugs.freedesktop.org/show_bug.cgi?id=89368